feat: Localize app to Bahasa Malaysia
Updates application name, titles, and UI elements to use Bahasa Malaysia, improving accessibility for local users. Includes localization of study group names and metadata.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mathmaster:-pspm-sm025-practice",
+  "name": "mathmaster:-latihan-pspm-sm025",
   "private": true,
   "version": "0.0.0",
   "type": "module",
